--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.2",
+    "command-line-args": "^5.0.2",
     "csv": "^3.1.0",
     "reverse-polish-notation": "^0.1.0",
     "sinon": "^6.0.0"
